--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
 GCP_PROJECT=titanic-393415
 GCP_REGION=europe-west1
-BUCKET_NAME=titanic_clement7991
 
 GCR_IMAGE=titanic
+GCR_REGION=eu.gcr.io
+GCR_MEMORY=2Gi
 
-PORT=8000
+BUCKET_NAME=titanic_clement7991
+
+INSTANCE=titanic-instance
+
+PORT_NUMBER=8000
